[gd_scene load_steps=6 format=3 uid="uid://dq2d125kftur6"]

[ext_resource type="Script" uid="uid://c2jyudi8823qj" path="res://addons/tube/inspector/peer_item_control.gd" id="1_2007k"]
[ext_resource type="Theme" uid="uid://bcibt73qths3g" path="res://addons/tube/inspector/theme.tres" id="1_uctpu"]
[ext_resource type="ButtonGroup" uid="uid://fko7ise7cj31" path="res://addons/tube/inspector/tracker_peer_item_button_group.tres" id="2_nna7f"]
[ext_resource type="Texture2D" uid="uid://bblpobvrbvblp" path="res://addons/tube/inspector/icons/icons_sheet_white.png" id="3_hvdy4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uctpu"]
atlas = ExtResource("3_hvdy4")
region = Rect2(400, 1200, 100, 100)

[node name="PeerItemControl" type="MarginContainer"]
offset_right = 202.0
offset_bottom = 38.0
theme = ExtResource("1_uctpu")
script = ExtResource("1_2007k")

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_type_variation = &"ButtonFlat"
toggle_mode = true
button_group = ExtResource("2_nna7f")
alignment = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="StateIndicator" type="Panel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 12)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_type_variation = &"PanelIndicator"

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderMedium"
text = "PEER_ID"
text_overrun_behavior = 1

[node name="KickButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
tooltip_text = "Kick"
theme_type_variation = &"ButtonFlat"
icon = SubResource("AtlasTexture_uctpu")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/KickButton" to="." method="_on_kick_button_pressed"]
